--- a/public/news.html
+++ b/public/news.html
@@ -1,140 +1,142 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/com.css">
-	<link rel="stylesheet" href="css/news.css">
-	<style>
-		
-	</style>
+    <meta charset="UTF-8">
+    <title>新闻资讯</title>
+    <link rel="stylesheet" href="css/com.css">
+    <link rel="stylesheet" href="css/news.css">
+    <style>
+
+    </style>
 </head>
+
 <body onload='news_search("最新")'>
 
-<!-- 导航栏  -->
-<nav>
-	<div class='nav-logo'>
-		<a href="#" class='login-hide'></a>
-	</div>
-	<ul class='nav-list'>
-		<li><a href="index.html">官方首页<span class='list-name'>HOME</span></a></li>
-		<li><a href="news.html">新闻资讯<span class='list-name'>NEWS</span></a></li>
-		<li><a href="sprite.html">妖灵图鉴<span class='list-name'>SPRITE</span></a></li>
-		<li><a href="activity.html">活动中心<span class='list-name'>ACTIVITY</span></a></li>
-		<li><a href="strategy.html">攻略中心<span class='list-name'>STRATEGY</span></a></li>
-		<li><a href="videos.html">精彩视频<span class='list-name'>VIDEOS</span></a></li>
-		<li><a href="videos.html">进入论坛<span class='list-name'>COMMUNITY</span></a></li>
-	</ul>
-	 <a href="#" class="h-book-btn spr text-hide">万物有灵</a>
-</nav>
-<!-- 图片背景 -->
-	<div class="inner-kv">
-		
-	</div>
-<!-- 新闻资讯 -->
-	<div	class='inner-top clearfix'>
-		<h2 class='inner-title tit-news d-spr text-hide'>新闻资讯</h2>
-	</div>
-		<div class="inner-con inner-news-list">
-			<div class="tab-c comm-tab">
-				<a href=""class='tab-prev prev spr text-hide'>上一个</a>
-				<ul class='tab-hd'>
-					<li class='tab-item on'><a href="javascript:news_search('最新')" class='d-spr text-hide f-1-2 t-zx'>最新</a></li>
-					<li class='tab-item'><a href="javascript:news_search('新闻')"  class='d-spr text-hide f-1-2 t-xw'>新闻</a></li>
-					<li class='tab-item'><a href="javascript:news_search('公告')"  class='d-spr text-hide f-1-2 t-gg'>公告</a></li>
-					<li class='tab-item'><a href="javascript:news_search('活动')"  class='d-spr text-hide f-1-2 t-hd'>活动</a></li>
-				</ul>
-				<a href="" class='tab-next next spr text-hide'>下一个</a>
-			</div>
-			<div class="grid-tab-bd">
-				<div class="tab-panel" id='news_item'>
-					
-				</div>
-			</div>
-		</div>
+    <!-- 导航栏  -->
+    <nav>
+        <div class='nav-logo'>
+            <a href="#" class='login-hide'></a>
+        </div>
+        <ul class='nav-list'>
+            <li><a href="index.html">官方首页<span class='list-name'>HOME</span></a></li>
+            <li><a href="news.html">新闻资讯<span class='list-name'>NEWS</span></a></li>
+            <li><a href="sprite.html">妖灵图鉴<span class='list-name'>SPRITE</span></a></li>
+            <li><a href="activity.html">活动中心<span class='list-name'>ACTIVITY</span></a></li>
+            <li><a href="strategy.html">攻略中心<span class='list-name'>STRATEGY</span></a></li>
+            <li><a href="videos.html">精彩视频<span class='list-name'>VIDEOS</span></a></li>
+            <li><a href="https://bbs.zhuoyao.qq.com/forum.php?mod=forumdisplay&fid=61" target="_blank">进入论坛<span class='list-name'>COMMUNITY</span></a></li>
+        </ul>
+        <a href="javascript:void()" class="h-book-btn spr text-hide">万物有灵</a>
+    </nav>
+    <!-- 图片背景 -->
+    <div class="inner-kv">
+
+    </div>
+    <!-- 新闻资讯 -->
+    <div class='inner-top clearfix'>
+        <h2 class='inner-title tit-news d-spr text-hide'>新闻资讯</h2>
+    </div>
+    <div class="inner-con inner-news-list">
+        <div class="tab-c comm-tab">
+            <a href="" class='tab-prev prev spr text-hide'>上一个</a>
+            <ul class='tab-hd'>
+                <li class='tab-item on'><a href="javascript:news_search('最新')" class='d-spr text-hide f-1-2 t-zx'>最新</a></li>
+                <li class='tab-item'><a href="javascript:news_search('新闻')" class='d-spr text-hide f-1-2 t-xw'>新闻</a></li>
+                <li class='tab-item'><a href="javascript:news_search('公告')" class='d-spr text-hide f-1-2 t-gg'>公告</a></li>
+                <li class='tab-item'><a href="javascript:news_search('活动')" class='d-spr text-hide f-1-2 t-hd'>活动</a></li>
+            </ul>
+            <a href="" class='tab-next next spr text-hide'>下一个</a>
+        </div>
+        <div class="grid-tab-bd">
+            <div class="tab-panel" id='news_item'>
+
+            </div>
+        </div>
+    </div>
 
 
-	<!--底部内容  -->
-	<div class="foot-wrap">
-		<h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
-		<ul class='contact-list'>
-			<li class='contact-bbs'>
-				<a href=""><span class='spr text-hide'>官方论坛</span></a>
-			</li>
-			<li class='contact-buluo'>
-				<a href=""><span class='spr text-hide'>兴趣部落</span></a>
-			</li>
-			<li class='contact-wxyxq'>
-				<img src="img/yxqqr.jpg" alt=""><span class='spr text-hide'>微信朋友圈</span>
-			</li>
-			<li class='contact-wx'>
-				<img src="img/wxqr.jpg" alt=""><span class='spr text-hide'>微信公众号</span>
-			</li>
-		</ul>
-		<div class="foot-list">
-			<ul class="list-cont">
-				<li class="list-item">
-					<a href="#" target="_blank">腾讯互动娱乐</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">服务条款</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">腾讯游戏隐私保护指引</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">腾讯游戏招聘</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">腾讯游戏客服</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">游戏地图</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">商务合作</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">腾讯网</a>
-					<span class="f_line">|</span>
-					<a href="#" target="_blank">网站导航</a>
-				</li>
-				<li class="list-item">
-					<a target="_blank" href="#">腾讯公司版权所有</a>
-				</li>
-				<li class="list-item">
-					<a target="_blank" href="#">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
-				</li>
-				<li class="list-item">
-					<a target="_blank" href="#">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
-				</li>
+    <!--底部内容  -->
+    <div class="foot-wrap">
+        <h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
+        <ul class='contact-list'>
+            <li class='contact-bbs'>
+                <a href=""><span class='spr text-hide'>官方论坛</span></a>
+            </li>
+            <li class='contact-buluo'>
+                <a href=""><span class='spr text-hide'>兴趣部落</span></a>
+            </li>
+            <li class='contact-wxyxq'>
+                <img src="img/yxqqr.jpg" alt=""><span class='spr text-hide'>微信朋友圈</span>
+            </li>
+            <li class='contact-wx'>
+                <img src="img/wxqr.jpg" alt=""><span class='spr text-hide'>微信公众号</span>
+            </li>
+        </ul>
+        <div class="foot-list">
+            <ul class="list-cont">
+                <li class="list-item">
+                    <a href="#" target="_blank">腾讯互动娱乐</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">服务条款</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">腾讯游戏隐私保护指引</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">腾讯游戏招聘</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">腾讯游戏客服</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">游戏地图</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">商务合作</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">腾讯网</a>
+                    <span class="f_line">|</span>
+                    <a href="#" target="_blank">网站导航</a>
+                </li>
+                <li class="list-item">
+                    <a target="_blank" href="#">腾讯公司版权所有</a>
+                </li>
+                <li class="list-item">
+                    <a target="_blank" href="#">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
+                </li>
+                <li class="list-item">
+                    <a target="_blank" href="#">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
+                </li>
 
-			</ul>
-			<p class="foot-h">仿：H-15159883705</p>
-		</div>
-	</div>
+            </ul>
+            <p class="foot-h">仿：H-15159883705</p>
+        </div>
+    </div>
 </body>
 
-	<script>
-		function news_search(data){
-			var xhr=new XMLHttpRequest();
-			xhr.onreadystatechange=function(){
-				if(xhr.readyState==4&&xhr.status==200){
-					var result=xhr.responseText;
-					var obj=JSON.parse(result);
+<script>
+    function news_search(data) {
+        var xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function() {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                var result = xhr.responseText;
+                var obj = JSON.parse(result);
 
-					var col_news=document.getElementById('news_item');
-					var col_html='<ul class="col-news">';
-					for(var key in obj){
-						obj[key].news_date=obj[key].news_date.slice(0,10);
-						console.log(obj[key].news_date);
-						col_html+=`<li>
+                var col_news = document.getElementById('news_item');
+                var col_html = '<ul class="col-news">';
+                for (var key in obj) {
+                    obj[key].news_date = obj[key].news_date.slice(0, 10);
+                    console.log(obj[key].news_date);
+                    col_html += `<li>
 							<span class=\'time\'>${obj[key].news_date}</span>
 							<a href=\"#\">「${data}」${obj[key].news_cont}</a>
 						</li>`
-					}
-					col_html+='</ul>'
-					console.log(col_news);
-					col_news.innerHTML=col_html;
-				}
-			}
-			var formdata='news_sort='+data;
-			xhr.open('get','/news/all?'+formdata,true);
-			xhr.send();
-		}
-	
-	</script>
+                }
+                col_html += '</ul>'
+                console.log(col_news);
+                col_news.innerHTML = col_html;
+            }
+        }
+        var formdata = 'news_sort=' + data;
+        xhr.open('get', '/news/all?' + formdata, true);
+        xhr.send();
+    }
+</script>
+
 </html>
